# PromSRC

./: .env.example  .eslintrc.cjs  .gitignore  .gitmodules  .prom-repo-sync-ignore  ARCHITECTURE_ANALYSIS.md  CIS.docx  Context.md  Dockerfile  PROPOSALS_ANALYSIS.md  Prometheus_CIS_Plan.docx  Prometheus_Teams_CIS_Master_Plan.docx  Prometheus_Teams_CIS_Master_Plan.md  README-DESKTOP.md  WEBHOOKS.md  apply-local-llm-patch.js  b5-server-v2.js  check-build.bat  docker-compose.yml  electron-builder-public.yml  electron-builder.yml  package-lock.json  package.json  prometheus_browser_intelligence.docx  rebrand-src.js  runtime-dependencies.public.json  skills-lock.json  start-gateway.bat  test-ollama.mjs  tsconfig.json  write-chat-helpers.js
.claude/: settings.local.json
.prometheus/: .migrated-from-localclaw  audit-log.jsonl  config.json  facts.json  managed-teams.json  mcp-servers.json  update_state.json
creative-benchmark-cli/: meta.json  package.json
docs/: AGENT_SUBAGENT_BENCHMARK.md  BACKGROUND_DESKTOP_AUTOMATION.md  BROWSER_AUTOMATION_BENCHMARK.md  CODING_CONTEXT_PACKET_V3.md  DESKTOP_AUTOMATION_BENCHMARK.md  HYPERFRAMES_CREATIVE_MODE_DEEP_DIVE_2026-07-11.md  MACOS-RELEASE.md  OBSIDIAN_BRIDGE.md  PERSONAL_CHROME_EXTENSION.md  SELF_REPAIR_CONSOLIDATION_2026-07-12.md  SELF_REPAIR_RUNTIME_HARDENING_2026-07-12.md  SKILL_CATALOG_FINAL_CLASSIFICATION_2026-07-12.json  SKILL_CATALOG_MIGRATION_2026-07-11.md  SKILL_PHASE_2C_2D_2026-07-12.md  SKILL_PHASE_3_BATCH_1_2026-07-12.md  (+11 more)
native/desktop-helper-windows/: CMakeLists.txt  README.md  main.cpp
workspace/games/figure-8-drift-vita/: .gitignore  AGENTS.md  CMakeLists.txt  FIRST_DAY_AUDIT_2026-07-17.md  PROMETHEUS_WORKFLOW.md  README.md  VITA_LINK_DEPLOYMENT.md  build-vita.sh  preview-city.ps1  requirements-preview.txt
workspace/games/figure-8-drift-vita/assets/: README.md
workspace/games/figure-8-drift-vita/assets/sce_sys/livearea/contents/: template.xml
workspace/games/figure-8-drift-vita/pc-bridge/: protocol.mjs  protocol.test.mjs  server.mjs
workspace/games/figure-8-drift-vita/snapshots/known-good-raúl-confirmed-2026-07-18/: figure8_vita.before-new-task.vpk  main.cpp.pre-new-task
workspace/games/figure-8-drift-vita/src/: main.cpp  main.cpp.bak-sandbox-20260719-205446
workspace/games/figure-8-drift-vita/tools/: apply_sandbox_pass.py  check_city_layout.py  check_control_regressions.py  city_preview.py
workspace/games/figure-8-drift-vita/tools/vita-link-shim/: collect2.c
workspace/games/prometheus-vita/input-plugin/: CMakeLists.txt  build-vita.sh  main.c  plugin.yml
workspace/games/prometheus-vita/shell-plugin/: CMakeLists.txt  build-vita.sh  main.c  plugin.yml
workspace/games/prometheus-vita/vita-client/: CMakeLists.txt  build-vita.sh
workspace/games/prometheus-vita/vita-client/src/: main.cpp
workspace/games/vitalink-vita/: .tmp-analyze-r12-firmware.py  .tmp-analyze-r12-param-sfo.py  .tmp-analyze-r12-wlanbt.py  .tmp-list-vita-bt-modules.py  .tmp-r12-cwd-list.py  .tmp-r12-readonly-firmware-retrieve.py  .tmp-r12-retrieve-settings.py  .tmp-r12-sequential-cwd-retrieve.py  .tmp-retrieve-r10.py  .tmp-retrieve-r11.py  .tmp-retrieve-r12-modules.py  .tmp-retrieve-r3.py  .tmp-retrieve-r4.py  .tmp-retrieve-r5.py  .tmp-retrieve-r6.py  .tmp-retrieve-r7.py  .tmp-retrieve-r9.py  .tmp-upload-r10.py  .tmp-upload-r11.py  .tmp-upload-r4.py  .tmp-upload-r5.py  .tmp-upload-r6.py  .tmp-upload-r7.py  .tmp-upload-r9.py  AGENTS.md  CMakeLists.txt  README.md  VITA_SYSTEM_RUNBOOK.md  build-vita.sh  package.json
workspace/games/vitalink-vita/deploy/: SHA256SUMS.txt
workspace/games/vitalink-vita/deploy/remote-verify/: VITALINK_GATE1.remote.vpk  VITALINK_GATE1.vpk  VITALINK_GATE1_R2.vpk  VITALINK_GATE1_R3.remote.vpk  config.gate2-live.txt  vitalink_bt_probe_kernel.live.skprx
workspace/games/vitalink-vita/pc-bridge/: vitalink-upload.mjs  vitalink-upload.test.mjs
workspace/games/vitalink-vita/plugin/: CMakeLists.txt  build-vita.sh  main.c  plugin.yml
workspace/games/vitalink-vita/reports/: r12-static-event-ownership-audit-2026-07-19.md  vitalink-kernel-probe-gate2-r2-2026-07-19.txt  vitalink-probe-report-r3-2026-07-19.txt
workspace/games/vitalink-vita/reports/r10-retrieval/: kernel-probe-r10.txt  vitalink-gate2-r10-start.txt
workspace/games/vitalink-vita/reports/r11-deploy-verify/: vitalink_bt_probe_kernel.skprx
workspace/games/vitalink-vita/reports/r11-retrieval/: kernel-probe-r11.txt  vitalink-gate2-r11-start.txt
workspace/games/vitalink-vita/reports/r12-firmware-retrieval/: cwd-listings.json  offline-analysis.txt  os0__kd__wlanbt_robin_img_ax.embedded.elf  os0__kd__wlanbt_robin_img_ax.skprx  param-sfo-analysis.txt  retrieval-manifest-cwd.json  retrieval-manifest-sequential-cwd.json  retrieval-manifest.json  wlanbt-container-analysis.txt
workspace/games/vitalink-vita/reports/r12-retrieval/: retrieval-summary.txt
workspace/games/vitalink-vita/reports/r13-feasibility-2026-07-19/: R13_STATIC_FEASIBILITY.md  artifact-checksums.txt
workspace/games/vitalink-vita/reports/r2-retrieval/: kernel-probe-r2.txt  vitalink-gate2-r2-start.txt  vitalink_bt_probe_kernel.skprx
workspace/games/vitalink-vita/reports/r3-retrieval/: kernel-probe-r3.txt  vitalink-gate2-r3-start.txt  vitalink_bt_probe_kernel.skprx
workspace/games/vitalink-vita/reports/r4-retrieval/: kernel-probe-r4.txt  vitalink-gate2-r4-start.txt  vitalink_bt_probe_kernel.skprx
workspace/games/vitalink-vita/reports/r5-retrieval/: kernel-probe-r5.txt  vitalink-gate2-r5-start.txt  vitalink_bt_probe_kernel.skprx
workspace/games/vitalink-vita/reports/r6-retrieval/: kernel-probe-r6.txt  vitalink-gate2-r6-start.txt  vitalink_bt_probe_kernel.skprx
workspace/games/vitalink-vita/reports/r7-retrieval/: kernel-probe-r7.txt  vitalink-gate2-r7-start.txt  vitalink_bt_probe_kernel.skprx
workspace/games/vitalink-vita/reports/r9-deploy-verify/: vitalink_bt_probe_kernel.skprx
workspace/games/vitalink-vita/reports/r9-retrieval/: kernel-probe-r9.txt  vitalink-gate2-r9-start.txt  vitalink_bt_probe_kernel.skprx
workspace/games/vitalink-vita/src/: bt_adapter.c  bt_adapter.h  main.c
(+6535 files in other folders)
