cmake_minimum_required(VERSION 3.10)
if(NOT DEFINED CMAKE_TOOLCHAIN_FILE)
  set(CMAKE_TOOLCHAIN_FILE "$ENV{VITASDK}/share/vita.toolchain.cmake" CACHE PATH "toolchain")
endif()
project(vitalink_bt_probe_kernel C)
include("$ENV{VITASDK}/share/vita.cmake" REQUIRED)
add_executable(${PROJECT_NAME} main.c)
target_link_libraries(${PROJECT_NAME} SceIofilemgrForDriver_stub SceBtForDriver_stub SceThreadmgrForDriver_stub)
set_target_properties(${PROJECT_NAME} PROPERTIES LINK_FLAGS "-nostdlib")
vita_create_self(${PROJECT_NAME}.skprx ${PROJECT_NAME} CONFIG plugin.yml UNSAFE)
